--- a/slack_front/src/SignIn.css
+++ b/slack_front/src/SignIn.css
@@ -2,20 +2,12 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Slack-logo {
 }
 
 .App-header {
   background-color: white;
-  /* min-height: 100vh; */
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +16,33 @@
   color: black;
 }
 
-.App-link {
-  color: #61dafb;
+.Main_login_page {
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.login_index {
+}
+
+.Goolge_login_btn {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+hr {
+  display: block;
+  border: none;
+  border-top: 1px solid #ddd;
+  clear: both;
+}
+
+.horizontal_content_line {
+  flex-grow: 1;
+  margin: 0;
+}
+
+.email_input_box {
+  margin-top: 20px;
+}
+
+.email_login_box {
+  margin-top: 8px;
 }
