--- a/slack_front/src/SignIn.css
+++ b/slack_front/src/SignIn.css
@@ -1,31 +1,103 @@
 .App {
-  text-align: center;
-}
-
-.Slack-logo {
-}
-
-.App-header {
-  background-color: white;
-  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: black;
+  background-color: rgba(var(--sk_primary_background, 255, 255, 255), 1);
+  min-height: 100%;
+  font-family: NotoSansKR, Slack-Lato, appleLogo, sans-serif;
 }
 
-.Main_login_page {
+header {
+  padding: 48px 0 40px;
+  width: 100%;
+  display: grid;
+  align-items: center;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.header_sidelink {
+  text-align: right;
+  font-size: 13px;
+  color: rgba(var(--sk_foreground_max_solid, 97, 96, 97), 1);
+  padding-right: 40px;
+}
+
+.SignUp_sidelink {
+  font-weight: 700;
+  color: #1264a3;
+  text-decoration: none;
+}
+
+.login_heading {
+  font-family: Slack-Larsseit, Helvetica Neue, Helvetica, Segoe UI, Tahoma,
+    Arial, sans-serif;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 46px;
+  max-width: 700px;
+  text-align: center;
+  letter-spacing: -0.75px;
+  margin-bottom: 10px;
+}
+
+.sub-heading {
+  font-size: 18px;
+  line-height: 27px;
+  margin-bottom: 32px;
+  color: #454245;
+  max-width: 700px;
+  text-align: center;
 }
 
 .login_index {
 }
 
-.Goolge_login_btn {
-  margin-top: 20px;
-  margin-bottom: 20px;
+/* 구글 로그인 버튼 */
+.full_width {
+  width: 100%;
+  max-width: 100%;
 }
+
+.c-google_login {
+  background-color: #fff;
+  border: 2px solid #4285f4;
+  color: #4285f4;
+}
+
+.c-third_party_auth {
+  display: flex;
+  padding: 0;
+}
+
+.c-button--large {
+  font-size: 18px;
+  font-weight: 900;
+  height: 44px;
+  min-width: 96px;
+}
+
+.c-button {
+  user-select: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: 4px;
+  align-items: center;
+  position: relative;
+  justify-content: center;
+  text-align: center;
+  white-space: nowrap;
+  -webkit-appearance: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+}
+
+/* 여기까지 */
 
 hr {
   display: block;
