--- a/src/css/SignIn.css
+++ b/src/css/SignIn.css
@@ -240,8 +240,8 @@ input[type="password"].c-input_text {
 }
 
 .p-get_started_aubergine_button {
-  /* color: #fff; */
-  background-color: #4a154b;
+  color: #fff !important;
+  background-color: #4a154b !important;
   border: none;
 }
 
@@ -265,4 +265,23 @@ input[type="password"].c-input_text {
   height: 44px;
   min-width: 96px;
   padding: 0 16px 3px;
+}
+
+.c-button {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  outline: none;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  align-items: center;
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+  text-align: center;
+  white-space: nowrap;
+  -webkit-appearance: none;
+  -webkit-tap-highlight-color: transparent;
 }
