--- a/src/css/LoginGoogle.css
+++ b/src/css/LoginGoogle.css
@@ -3,9 +3,10 @@
   max-width: 100%;
 }
 .c-google_login {
-  background-color: #fff;
-  border: 2px solid #4285f4;
-  color: #4285f4;
+  background-color: #fff !important;
+  border: 2px solid #4285f4 !important;
+  border-radius: 4px !important;
+  color: #4285f4 !important;
 }
 .c-third_party_auth {
   display: flex;
@@ -13,15 +14,15 @@
 }
 
 .c-button--large {
-  font-size: 18px;
-  font-weight: 900;
-  height: 44px;
-  min-width: 96px;
+  font-size: 18px !important;
+  font-weight: 900 !important;
+  height: 50px !important;
+  min-width: 96px !important;
 }
 .c-button--primary {
-  transition: all 80ms linear;
+  transition: all 80ms linear !important;
   background: #007a5a;
-  box-shadow: none;
+  box-shadow: none !important;
 }
 .c-button,
 .c-button:active,
