--- a/src/css/SetupWorkspace.css
+++ b/src/css/SetupWorkspace.css
@@ -469,6 +469,29 @@ input {
   -webkit-appearance: none;
   -webkit-tap-highlight-color: transparent;
 }
+.c-button:disabled {
+  background: rgba(var(--sk_foreground_low_solid, 221, 221, 221), 1);
+  color: rgba(var(--sk_primary_foreground, 29, 28, 29), 0.75);
+  cursor: default;
+  pointer-events: none;
+  text-shadow: none;
+  border-color: rgba(var(--sk_foreground_low_solid, 221, 221, 221), 1);
+  background-clip: initial;
+  box-shadow: none;
+  outline: none;
+  border: none;
+  border-radius: 4px;
+  margin-top: 48px;
+
+  min-width: 200px;
+  transition: none;
+  font-size: 18px;
+  font-weight: 900;
+  height: 44px;
+  padding: 0 16px 3px;
+  text-decoration: none;
+}
+
 .c-alert {
   display: flex;
 }
