--- a/src/css/ClientSidebar.css
+++ b/src/css/ClientSidebar.css
@@ -248,6 +248,7 @@
   line-height: inherit;
 }
 .c-icon {
+  margin: 0 10px 0 0;
   align-items: center;
   justify-content: center;
 }
@@ -280,30 +281,99 @@
   align-items: center;
   margin-left: auto;
 }
+
 .p-channel_sidebar--iap1 .p-channel_sidebar__section_heading_plus,
 .p-drag_layer .p-channel_sidebar__section_heading_plus {
   padding: 3px;
   border-radius: 4px;
 }
-.c-button-unstyled {
-  background: none;
-  border: 0;
-  color: inherit;
-  font: inherit;
-  margin: 0;
-  line-height: inherit;
-  overflow: initial;
-  padding: 0;
-  text-align: initial;
-  vertical-align: initial;
-  cursor: pointer;
+
+.p-channel_sidebar__section_heading_plus {
+  margin-left: 8px;
+  line-height: 1;
+  opacity: 0;
+  transition: opacity 0.1s ease-out;
+  color: rgb(188, 171, 188);
+  z-index: 3;
+  height: 26px;
+  width: 26px;
+}
+
+.p-channel_sidebar__section_heading:hover
+  .p-channel_sidebar__section_heading_plus,
+.p-channel_sidebar__section_heading_plus.p-channel_sidebar__section_heading_plus--showing {
+  transition: opacity 0.1s ease-out;
+  opacity: 1;
+}
+
+.p-channel_sidebar--iap1 .p-channel_sidebar__section_heading_plus:hover {
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.p-channel_sidebar--iap1 .p-channel_sidebar__section_heading_plus,
+.p-drag_layer .p-channel_sidebar__section_heading_plus {
+  padding: 3px;
+  border-radius: 4px;
 }
 
 .p-channel_sidebar__name {
-  margin-left: 4px;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
   opacity: 1;
   color: rgb(188, 171, 188);
+}
+
+.p-channel_sidebar__user_avatar {
+  position: relative;
+  height: 20px;
+  width: 20px;
+  margin-right: 8px;
+}
+.c-base_icon--image {
+  background-size: 100%;
+  background-repeat: no-repeat;
+  display: inline-block;
+}
+.c-base_icon {
+  background-color: rgba(var(--sk_foreground_low, 29, 28, 29), 0.13);
+  position: relative;
+  border-radius: 4px;
+  color: rgba(var(--sk_primary_foreground, 29, 28, 29), 1);
+  flex-shrink: 0;
+}
+.p-channel_sidebar__presence_icon.p-channel_sidebar__presence_icon--on-avatar:before {
+  font-size: 15px;
+  line-height: 15px;
+}
+
+.p-channel_sidebar__presence_icon.p-channel_sidebar__presence_icon--on-avatar {
+  position: absolute;
+  top: 11px;
+  left: 10px;
+  margin: 0;
+}
+.p-channel_sidebar__presence_icon.c-presence--active {
+  color: #2bac76;
+}
+
+.p-channel_sidebar__presence_icon--on-avatar-border {
+  color: #3f0e40 !important;
+}
+
+.p-channel_sidebar_dm__name {
+  margin-top: 10px;
+  margin-left: 2px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  opacity: 1;
+  color: rgb(188, 171, 188);
+}
+
+.p-channel_sidebar__member_label {
+  margin-left: 8px;
+  font-weight: 400;
+  color: rgb(188, 171, 188);
+  opacity: 0.7;
 }
